main funksiyasiga yangi logika qoshildi

--- a/kiyim.html
+++ b/kiyim.html
@@ -30,20 +30,14 @@
 
             <div id="items" class="items">
 
-                    <a href="./error.html">Home</a>
-                    <a href="./error.html">About Us</a>
-                    <a href="./error.html">News</a>
-                    <a href="./error.html">Free</a>
-                    <a href="./error.html">Sing in</a>
-                    <a href="./error.html">
+                <a href="./error.html">Home</a>
+                <a href="./error.html">About Us</a>
+                <a href="./error.html">Servisec</a>
+                <a href="./error.html">News</a>
+                <a href="./error.html">Free</a>
+                <a href="./error.html">Sing in</a>
 
-                        <button id="plus">
-                            <i class="fa-solid fa-cart-plus"></i>
-                        </button>
-
-                    </a>
-
-                </div>
+            </div>
 
             <div class="buttons">
 
@@ -111,6 +105,7 @@
         </div>
 
 
+
         <!-- carusel -->
 
 
@@ -127,21 +122,22 @@
         </div>
 
 
+        
     </section>
 
     <section>
         <div class="carts conteiner">
             <div class="cart">
 
-                <img src="https://cdn.shopify.com/s/files/1/0195/2352/files/1000x-1_1024x1024.jpg?v=1612309487" alt>
+                <img src="https://d2j6dbq0eux0bg.cloudfront.net/images/81716756/3809624625.jpg" alt>
 
                 <i id="like" class="fa-solid fa-heart"></i>
 
                 <h1>
-                    ROLEX
+                    Apple MacBook Pro
                 </h1>
                 <p>
-                    500.000UZS
+                    10.000.000UZS
                 </p>
 
                 <button id="basket">
@@ -156,16 +152,15 @@
 
             <div class="cart">
 
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrsn1I-OrNoZKENuNiOLoE3wz3jmAjzJNpYw&s"
-                    alt>
+                <img src="https://d2j6dbq0eux0bg.cloudfront.net/images/81716756/3809624625.jpg" alt>
 
                 <i id="like" class="fa-solid fa-heart"></i>
 
                 <h1>
-                    Apple Watch
+                    Apple MacBook Pro
                 </h1>
                 <p>
-                    12.450.000UZS
+                    10.000.000UZS
                 </p>
 
                 <button id="basket">
@@ -180,15 +175,15 @@
 
             <div class="cart">
 
-                <img src="https://m.media-amazon.com/images/I/51CD8FYJZdL._AC_UF1000,1000_QL80_.jpg" alt>
+                <img src="https://d2j6dbq0eux0bg.cloudfront.net/images/81716756/3809624625.jpg" alt>
 
                 <i id="like" class="fa-solid fa-heart"></i>
 
                 <h1>
-                    Smart Watch
+                    Apple MacBook Pro
                 </h1>
                 <p>
-                    90.000UZS
+                    10.000.000UZS
                 </p>
 
                 <button id="basket">
@@ -203,15 +198,15 @@
 
             <div class="cart">
 
-                <img src="https://assets.dubuy.com/pictures/000363149_0.jpeg" alt>
+                <img src="https://d2j6dbq0eux0bg.cloudfront.net/images/81716756/3809624625.jpg" alt>
 
                 <i id="like" class="fa-solid fa-heart"></i>
 
                 <h1>
-                    CLASICO WATCH
+                    Apple MacBook Pro
                 </h1>
                 <p>
-                    130.000UZS
+                    10.000.000UZS
                 </p>
 
                 <button id="basket">
@@ -226,15 +221,15 @@
 
             <div class="cart">
 
-                <img src="https://rotorcraftwatches.com/cdn/shop/products/RC2404_frontal.jpg?v=1624273093" alt>
+                <img src="https://d2j6dbq0eux0bg.cloudfront.net/images/81716756/3809624625.jpg" alt>
 
                 <i id="like" class="fa-solid fa-heart"></i>
 
                 <h1>
-                    Rotorcraft Classico
+                    Apple MacBook Pro
                 </h1>
                 <p>
-                    200.000UZS
+                    10.000.000UZS
                 </p>
 
                 <button id="basket">
@@ -249,15 +244,15 @@
 
             <div class="cart">
 
-                <img src="https://assets.dubuy.com/pictures/000363278_0.jpeg" alt>
+                <img src="https://d2j6dbq0eux0bg.cloudfront.net/images/81716756/3809624625.jpg" alt>
 
                 <i id="like" class="fa-solid fa-heart"></i>
 
                 <h1>
-                    Clasico Quartz
+                    Apple MacBook Pro
                 </h1>
                 <p>
-                    350.000UZS
+                    10.000.000UZS
                 </p>
 
                 <button id="basket">
@@ -272,139 +267,6 @@
 
         </div>
     </section>
-
-    <footer id="footer" class="conteiner">
-            <h1>
-                bizning ijtimoiy tarmoqlarimiz
-            </h1>
-
-            <div class="bosh">
-
-                <div class="foter">
-                    <ol>
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-instagram"></i>
-                                </button>
-                            </li>
-
-                        </a>
-
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-telegram"></i>
-                                </button>
-                            </li>
-
-                        </a>
-
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-youtube"></i>
-                                </button>
-                            </li>
-
-                        </a>                    
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-square-facebook"></i>
-                                </button>
-                            </li>
-
-                        </a>
-                    </ol>
-
-                    <div class="foter_txt">
-                        <h2>
-                            Instagram
-                        </h2>
-
-                        <h2>
-                            Telegram
-                        </h2>
-
-                        <h2>
-                            Tou Tube
-                        </h2>
-
-                        <h2>
-                            Facebook
-                        </h2>
-                    </div>
-                </div>
-
-                <div class="foter">
-                    <ol>
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-github"></i>
-                                </button>
-                            </li>
-
-                        </a>
-
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-linkedin"></i>
-                                </button>
-                            </li>
-
-                        </a>
-
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-solid fa-phone"></i>
-                                </button>
-                            </li>
-
-                        </a>
-
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-solid fa-envelope"></i>
-                                </button>
-                            </li>
-
-                        </a>
-                    </ol>
-
-                    <div class="foter_txt">
-                        <h2>
-                            Git Hub
-                        </h2>
-
-                        <h2>
-                            Linkedin
-                        </h2>
-
-                        <h2>
-                            Telefon
-                        </h2>
-
-                        <h2>
-                            E pochta
-                        </h2>
-                    </div>
-                </div>
-
-            </div>
-        </footer>
 
     <script type="module" src="./js/app.js"></script>
 </body>
