--- a/soat.html
+++ b/soat.html
@@ -30,20 +30,14 @@
 
             <div id="items" class="items">
 
-                    <a href="./error.html">Home</a>
-                    <a href="./error.html">About Us</a>
-                    <a href="./error.html">News</a>
-                    <a href="./error.html">Free</a>
-                    <a href="./error.html">Sing in</a>
-                    <a href="./error.html">
+                <a href="./error.html">Home</a>
+                <a href="./error.html">About Us</a>
+                <a href="./error.html">Servisec</a>
+                <a href="./error.html">News</a>
+                <a href="./error.html">Free</a>
+                <a href="./error.html">Sing in</a>
 
-                        <button id="plus">
-                            <i class="fa-solid fa-cart-plus"></i>
-                        </button>
-
-                    </a>
-
-                </div>
+            </div>
 
             <div class="buttons">
 
@@ -272,139 +266,6 @@
 
         </div>
     </section>
-
-    <footer id="footer" class="conteiner">
-            <h1>
-                bizning ijtimoiy tarmoqlarimiz
-            </h1>
-
-            <div class="bosh">
-
-                <div class="foter">
-                    <ol>
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-instagram"></i>
-                                </button>
-                            </li>
-
-                        </a>
-
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-telegram"></i>
-                                </button>
-                            </li>
-
-                        </a>
-
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-youtube"></i>
-                                </button>
-                            </li>
-
-                        </a>                    
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-square-facebook"></i>
-                                </button>
-                            </li>
-
-                        </a>
-                    </ol>
-
-                    <div class="foter_txt">
-                        <h2>
-                            Instagram
-                        </h2>
-
-                        <h2>
-                            Telegram
-                        </h2>
-
-                        <h2>
-                            Tou Tube
-                        </h2>
-
-                        <h2>
-                            Facebook
-                        </h2>
-                    </div>
-                </div>
-
-                <div class="foter">
-                    <ol>
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-github"></i>
-                                </button>
-                            </li>
-
-                        </a>
-
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-brands fa-linkedin"></i>
-                                </button>
-                            </li>
-
-                        </a>
-
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-solid fa-phone"></i>
-                                </button>
-                            </li>
-
-                        </a>
-
-                        <a href="#">
-
-                            <li>
-                                <button>
-                                    <i class="fa-solid fa-envelope"></i>
-                                </button>
-                            </li>
-
-                        </a>
-                    </ol>
-
-                    <div class="foter_txt">
-                        <h2>
-                            Git Hub
-                        </h2>
-
-                        <h2>
-                            Linkedin
-                        </h2>
-
-                        <h2>
-                            Telefon
-                        </h2>
-
-                        <h2>
-                            E pochta
-                        </h2>
-                    </div>
-                </div>
-
-            </div>
-        </footer>
 
     <script type="module" src="./js/app.js"></script>
 </body>
